--- a/Lab3/src/app/classe/liste/liste.component.html
+++ b/Lab3/src/app/classe/liste/liste.component.html
@@ -1,18 +1,35 @@
 <div class="liste">
     <form (submit)="ajouter()">
-        <p> <input type="text" name="inserer" class="insertion" placeholder="Prenom" [(ngModel)]="inputFirstName" /></p>
-        <p> <input type="text" name="inserer" class="insertion" placeholder="Nom" [(ngModel)]="inputLastName" /></p>
-        <p> <input type="text" name="inserer" class="insertion" placeholder="Cell" [(ngModel)]="inputCellNumber" /></p>
-        <p> <input type="text" name="inserer" class="insertion" placeholder="Email" [(ngModel)]="inputEmail" /></p>
+        <p> <input type="text" name="inserer" class="insertion" placeholder="Enter your Firstname" [(ngModel)]="inputFirstName" /></p>
+        <p> <input type="text" name="inserer" class="insertion" placeholder="Enter your Lastname" [(ngModel)]="inputLastName" /></p>
+        <p> <input type="text" name="inserer" class="insertion" placeholder="Enter your Cell number" [(ngModel)]="inputCellNumber" /></p>
+        <p> <input type="email" name="email" class="insertion" placeholder="Enter your Email" [(ngModel)]="inputEmail" ngModel [email]="true"/></p>
 
-        <input type="submit" class="person-inserer" value="inserer person" />
+        <input type="submit" class="person-inserer" value="Ajouter à la liste" />
     </form>
+    <tr>
+        <th>Ranking</th>
+        <th>Lastmame</th>
+        <th>Firstname</th>
+        <th>Cellphone</th>
+        <th>Email</th>
+        <th>Action</th>
+    </tr>
     <tr class="person" *ngFor="let person of liste; let i = index;">
         <th>
             <div class="id">{{i}}</div>
         </th>
         <th>
             <div class="content">{{person.firstName}}</div>
+        </th>
+        <th>
+            <div class="content">{{person.lastName}}</div>
+        </th>
+        <th>
+            <div class="content">{{person.cellNumber}}</div>
+        </th>
+        <th>
+            <div class="content">{{person.email}}</div>
         </th>
         <th><button class="delete" (click)="suppression(i)">Supprimer</button></th>
     </tr>
